--- a/demo/runtime/Cargo.toml
+++ b/demo/runtime/Cargo.toml
@@ -98,8 +98,15 @@ sp-governed-map = { workspace = true }
 sp-block-producer-fees = { workspace = true }
 pallet-block-producer-fees = { workspace = true }
 
-[dev-dependencies]
 sp-io = { workspace = true }
+schnorr_jubjub = { workspace = true }
+midnight-circuits = { git = "https://github.com/midnightntwrk/midnight-circuits", branch = "iquerejeta/committee_proof"}
+halo2curves = { version = "0.7.0", features = ["derive_serde"] }
+blstrs = { git = "https://github.com/davidnevadoc/blstrs", rev = "3dfe5bf" }
+group = "0.13"
+ff = "0.13"
+
+[dev-dependencies]
 sp-keyring = { workspace = true }
 # we actually don't need it, cause in dev we can use full sp-keyring, but its usage gives a good example of how to create accountIds in WASM
 hex = { workspace = true }
