--- a/toolkit/address-associations/pallet/Cargo.toml
+++ b/toolkit/address-associations/pallet/Cargo.toml
@@ -23,6 +23,7 @@ hex-literal = { workspace = true, optional = true }
 sp-core = { workspace = true, optional = true }
 
 [dev-dependencies]
+pallet-balances = { workspace = true }
 sp-core = { workspace = true }
 sp-io = { workspace = true }
 sp-runtime = { workspace = true }
@@ -34,6 +35,7 @@ std = [
     "frame-support/std",
     "frame-system/std",
     "log/std",
+    "pallet-balances/std",
     "parity-scale-codec/std",
     "scale-info/std",
     "sidechain-domain/std",
@@ -46,5 +48,5 @@ runtime-benchmarks = [
     "frame-system/runtime-benchmarks",
     "sp-runtime/runtime-benchmarks",
     "hex-literal",
-    "sp-core"
+    "sp-core",
 ]
